--- a/app/src/main/res/layout/fragment_song_item.xml
+++ b/app/src/main/res/layout/fragment_song_item.xml
@@ -13,6 +13,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/fragment_song_item_artist_song_name"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintHorizontal_bias="0"
         android:id="@+id/list_songs_cardView_thumb"
         app:cardCornerRadius="8dp">
 
@@ -22,30 +25,48 @@
             android:layout_height="60dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/icon"/>
 
     </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/list_songs_title"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/fragment_song_item_artist_song_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="7dp"
         android:layout_marginTop="4dp"
-        android:text="TextView"
-        android:textSize="16sp"
-        android:textStyle="bold"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@+id/list_songs_cardView_thumb"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/list_songs_artist"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="2dp"
-        android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/list_songs_cardView_thumb"
-        app:layout_constraintTop_toBottomOf="@+id/list_songs_title" />
+        <TextView
+            android:id="@+id/list_songs_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:maxLines="2"
+            android:ellipsize="end"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Iris" />
+
+        <TextView
+            android:id="@+id/list_songs_artist"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:ellipsize="end"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/list_songs_title"
+            tools:text="The Goo Goo Dolls" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
