--- a/app/src/main/res/layout/fragment_song_details.xml
+++ b/app/src/main/res/layout/fragment_song_details.xml
@@ -15,57 +15,74 @@
         android:layout_marginTop="15dp"
         app:cardCornerRadius="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/fragment_song_details_song_name_artist_album_contraint"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintHorizontal_bias="0">
 
         <ImageView
             android:id="@+id/img_thumb_song_detail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:srcCompat="@tools:sample/avatars"
-            android:importantForAccessibility="no" />
+            android:importantForAccessibility="no"
+            tools:srcCompat="@tools:sample/avatars" />
 
     </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/name_song_detail"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/fragment_song_details_song_name_artist_album_contraint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
-        android:fontFamily="sans-serif"
-        android:textSize="25sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/card_thumb_song_detail"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Your Number" />
+        app:layout_constrainedWidth="true">
 
-    <TextView
-        android:id="@+id/artist_song_detail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="4dp"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/card_thumb_song_detail"
-        app:layout_constraintTop_toBottomOf="@+id/name_song_detail"
-        tools:text="Rammor" />
+        <TextView
+            android:id="@+id/name_song_detail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:fontFamily="sans-serif"
+            android:maxLines="2"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Your Number" />
 
-    <TextView
-        android:id="@+id/album_song_detail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="4dp"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/card_thumb_song_detail"
-        app:layout_constraintTop_toBottomOf="@+id/artist_song_detail"
-        tools:text="Your Number" />
+        <TextView
+            android:id="@+id/artist_song_detail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/name_song_detail"
+            tools:text="Rammor" />
+
+        <TextView
+            android:id="@+id/album_song_detail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/artist_song_detail"
+            tools:text="Your Number" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ScrollView
         android:layout_width="394dp"
