--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -103,7 +103,7 @@
                     android:id="@+id/home_thumb_song_details"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:bindImage="@{homeViewModel.actualSong.smallThumb}"
+                    app:bindImage="@{homeViewModel.actualSong.thumb}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
